fixes stanford only icon not showing up

--- a/app/assets/stylesheets/modules/stanford-only.scss
+++ b/app/assets/stylesheets/modules/stanford-only.scss
@@ -1,5 +1,5 @@
 .stanford-only::after {
-  content: image-url('stanford-only.svg');
+  content: url('stanford-only.svg');
   margin-left: 5px;
   vertical-align: middle;
 }
